core/codegen/tests/ui-fail-nightly/uri_display.stderr
error: fieldless structs or variants are not supported
 --> $DIR/uri_display.rs:9:1
  |
9 | struct Foo1;
  | ^^^^^^^^^^^^
  |
note: error occurred while deriving `UriDisplay`
 --> $DIR/uri_display.rs:5:10
  |
5 | #[derive(UriDisplayQuery)]
  |          ^^^^^^^^^^^^^^^
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: fieldless structs or variants are not supported
  --> $DIR/uri_display.rs:16:1
   |
16 | struct Foo2();
   | ^^^^^^^^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:12:10
   |
12 | #[derive(UriDisplayQuery)]
   |          ^^^^^^^^^^^^^^^
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: empty enums are not supported
  --> $DIR/uri_display.rs:23:1
   |
23 | enum Foo3 { }
   | ^^^^^^^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:19:10
   |
19 | #[derive(UriDisplayQuery)]
   |          ^^^^^^^^^^^^^^^
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: fieldless structs or variants are not supported
  --> $DIR/uri_display.rs:31:5
   |
31 |     Variant,
   |     ^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:26:10
   |
26 | #[derive(UriDisplayQuery)]
   |          ^^^^^^^^^^^^^^^
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: tuple structs or variants must have exactly one field
  --> $DIR/uri_display.rs:39:13
   |
39 | struct Foo5(String, String);
   |             ^^^^^^^^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:35:10
   |
35 | #[derive(UriDisplayQuery)]
   |          ^^^^^^^^^^^^^^^
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid value: expected string literal
  --> $DIR/uri_display.rs:47:20
   |
47 |     #[form(field = 123)]
   |                    ^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:42:10
   |
42 | #[derive(UriDisplayQuery)]
   |          ^^^^^^^^^^^^^^^
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: struct must have exactly one field
  --> $DIR/uri_display.rs:55:13
   |
55 | struct Foo7(String, usize);
   |             ^^^^^^^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:52:10
   |
52 | #[derive(UriDisplayPath)]
   |          ^^^^^^^^^^^^^^
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: struct must have exactly one field
  --> $DIR/uri_display.rs:61:1
   |
61 | struct Foo8;
   | ^^^^^^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:58:10
   |
58 | #[derive(UriDisplayPath)]
   |          ^^^^^^^^^^^^^^
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: enums are not supported
  --> $DIR/uri_display.rs:67:1
   |
67 | enum Foo9 {  }
   | ^^^^^^^^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:64:10
   |
64 | #[derive(UriDisplayPath)]
   |          ^^^^^^^^^^^^^^
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: named structs are not supported
  --> $DIR/uri_display.rs:73:1
   |
73 | / struct Foo10 {
74 | | //~^ ERROR not supported
75 | |     named: usize
76 | | }
   | |_^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:70:10
   |
70 | #[derive(UriDisplayPath)]
   |          ^^^^^^^^^^^^^^
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo1: rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:5:10
    |
5   | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo1`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo1: rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:5:10
    |
5   | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo1`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: required because of the requirements on the impl of `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` for `&Foo1`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo1: rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:5:10
    |
5   | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo1`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: required because of the requirements on the impl of `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` for `&mut Foo1`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo2: rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:12:10
    |
12  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo2`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo2: rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:12:10
    |
12  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo2`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: required because of the requirements on the impl of `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` for `&Foo2`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo2: rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:12:10
    |
12  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo2`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: required because of the requirements on the impl of `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` for `&mut Foo2`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo3: rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:19:10
    |
19  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo3`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo3: rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:19:10
    |
19  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo3`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: required because of the requirements on the impl of `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` for `&Foo3`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo3: rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:19:10
    |
19  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo3`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: required because of the requirements on the impl of `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` for `&mut Foo3`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo4: rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:26:10
    |
26  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo4`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo4: rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:26:10
    |
26  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo4`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: required because of the requirements on the impl of `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` for `&Foo4`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo4: rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:26:10
    |
26  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo4`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: required because of the requirements on the impl of `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` for `&mut Foo4`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo5: rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:35:10
    |
35  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo5`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo5: rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:35:10
    |
35  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo5`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: required because of the requirements on the impl of `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` for `&Foo5`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo5: rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:35:10
    |
35  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo5`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: required because of the requirements on the impl of `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` for `&mut Foo5`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo6: rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:42:10
    |
42  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo6`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo6: rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:42:10
    |
42  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo6`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: required because of the requirements on the impl of `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` for `&Foo6`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo6: rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:42:10
    |
42  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo6`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: required because of the requirements on the impl of `rocket::http::uri::UriDisplay<rocket::http::uri::Query>` for `&mut Foo6`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo7: rocket::http::uri::UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:52:10
    |
52  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo7`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo7: rocket::http::uri::UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:52:10
    |
52  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo7`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: required because of the requirements on the impl of `rocket::http::uri::UriDisplay<rocket::http::uri::Path>` for `&Foo7`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo8: rocket::http::uri::UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:58:10
    |
58  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo8`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo8: rocket::http::uri::UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:58:10
    |
58  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo8`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: required because of the requirements on the impl of `rocket::http::uri::UriDisplay<rocket::http::uri::Path>` for `&Foo8`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo9: rocket::http::uri::UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:64:10
    |
64  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo9`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo9: rocket::http::uri::UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:64:10
    |
64  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo9`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: required because of the requirements on the impl of `rocket::http::uri::UriDisplay<rocket::http::uri::Path>` for `&Foo9`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo10: rocket::http::uri::UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:70:10
    |
70  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo10`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo10: rocket::http::uri::UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:70:10
    |
70  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `rocket::http::uri::UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo10`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs:195:18
    |
195 |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam`
    |
    = note: required because of the requirements on the impl of `rocket::http::uri::UriDisplay<rocket::http::uri::Path>` for `&Foo10`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
